--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -293,7 +293,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" id="gdlr-core-title-item-id-10199">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 16px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;color: #2c2c2c ;"><a target="_blank" href="https://www.acog.org/patient-resources/faqs/special-procedures/laparoscopy">Laproscopy</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 16px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;color: #2c2c2c ;"><a target="_blank" href="https://www.acog.org/patient-resources/faqs/special-procedures/laparoscopy">Laparoscopy</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h3></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -726,7 +726,10 @@
                                                             <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #17449e ;font-size: 18px ;">16660 Paramount Blvd Suite #309, Paramount, CA 90723</span></div>
                                                         </li>
                                                         <li class=" gdlr-core-skin-divider clearfix" style="margin-bottom: 14px ;"><span class="gdlr-core-icon-list-icon-wrap gdlr-core-left"><i class="gdlr-core-icon-list-icon icon-phone" style="color: #17449e ;font-size: 20px ;width: 20px ;" ></i></span>
-                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #17449e ;font-size: 18px ;">+1-234-5345-533</span></div>
+                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #17449e ;font-size: 18px ;">+1-562-634-1049 PHONE</span></div>
+                                                        </li>
+                                                        <li class=" gdlr-core-skin-divider clearfix" style="margin-bottom: 14px ;"><span class="gdlr-core-icon-list-icon-wrap gdlr-core-left"><i class="gdlr-core-icon-list-icon icon-printer" style="color: #17449e ;font-size: 20px ;width: 20px ;" ></i></span>
+                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #17449e ;font-size: 18px ;">+1-562-634-6149 FAX</span></div>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -858,7 +861,7 @@
                                         <li class="menu-item"><a target="_blank" href="https://www.acog.org/patient-resources/faqs/labor-delivery-and-postpartum-care/cesarean-birth">C-Section</a></li>
                                         <li class="menu-item"><a target="_blank" href="https://www.acog.org/patient-resources/faqs/gynecologic-problems/abnormal-cervical-cancer-screening-test-results">Excision of Cervix and Lesions</a></li>
                                         <li class="menu-item"><a href="#">Endocervical Curettage</a></li>
-                                        <li class="menu-item"><a target="_blank" href="https://www.acog.org/patient-resources/faqs/special-procedures/laparoscopy">Laproscopy</a></li>
+                                        <li class="menu-item"><a target="_blank" href="https://www.acog.org/patient-resources/faqs/special-procedures/laparoscopy">Laparoscopy</a></li>
                                         <li class="menu-item"><a target="_blank" href="https://www.acog.org/patient-resources/faqs/gynecologic-problems/uterine-fibroids">Myomectomy</a></li>
                                         <li class="menu-item"><a target="_blank" href="https://www.acog.org/patient-resources/faqs/special-procedures/cervical-cancer-screening">Gynecoloic Cancer Screening</a></li>
                                         <li class="menu-item"><a target="_blank" href="https://www.acog.org/patient-resources/faqs/gynecologic-problems/preparing-for-surgery">Gynecoloic Surgical Procedures</a></li>
