--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -108,10 +108,10 @@
                                                 <div class="gdlr-core-icon-list-item gdlr-core-item-pdlr gdlr-core-item-pdb clearfix  gdlr-core-left-align" style="padding-bottom: 19px ;">
                                                     <ul>
                                                         <li class=" gdlr-core-skin-divider clearfix" style="margin-bottom: 5px ;"><span class="gdlr-core-icon-list-icon-wrap gdlr-core-left"><i class="gdlr-core-icon-list-icon icon-phone" style="color: #000000 ;font-size: 20px ;width: 20px ;" ></i></span>
-                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #000000 ;font-size: 20px ;">+1-562-634-1049</span></div>
+                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #000000 ;font-size: 20px ;">(562)869-7007</span></div>
                                                         </li>
                                                         <li class=" gdlr-core-skin-divider clearfix" style="margin-bottom: 5px ;"><span class="gdlr-core-icon-list-icon-wrap gdlr-core-left"><i class="gdlr-core-icon-list-icon icon-home   " style="color: #000000 ;font-size: 20px ;width: 20px ;" ></i></span>
-                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #000000 ;font-size: 20px ;">16660 Paramount Blvd. Suite #309 Parmount, CA 90723-5459</span></div>
+                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #000000 ;font-size: 20px ;">7862 E. Firestone Blvd. Downey, CA 90241</span></div>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -173,7 +173,7 @@
                                 <div class="gdlr-core-pbf-column gdlr-core-column-30 bot-shadow" id="gdlr-core-column-71035">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="padding: 200px 0px 200px 0px;" data-sync-height="f2">
                                         <div class="gdlr-core-pbf-background-wrap wrapper-first-image">
-                                                <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(images/clinic.png) ;background-size: cover ;background-position: center ; background-repeat: no-repeat;" data-parallax-speed="0.05"></div>
+                                                <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(images/tender.png) ;background-size: cover ;background-position: center ; background-repeat: no-repeat;" data-parallax-speed="0.05"></div>
                                             </div>
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content"></div>
                                     </div>
