--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -108,7 +108,7 @@
                                                 <div class="gdlr-core-icon-list-item gdlr-core-item-pdlr gdlr-core-item-pdb clearfix  gdlr-core-left-align" style="padding-bottom: 19px ;">
                                                     <ul>
                                                         <li class=" gdlr-core-skin-divider clearfix" style="margin-bottom: 5px ;"><span class="gdlr-core-icon-list-icon-wrap gdlr-core-left"><i class="gdlr-core-icon-list-icon icon-phone" style="color: #000000 ;font-size: 20px ;width: 20px ;" ></i></span>
-                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #000000 ;font-size: 20px ;">(562)869-7007</span></div>
+                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #000000 ;font-size: 20px ;">(562) 869-7007</span></div>
                                                         </li>
                                                         <li class=" gdlr-core-skin-divider clearfix" style="margin-bottom: 5px ;"><span class="gdlr-core-icon-list-icon-wrap gdlr-core-left"><i class="gdlr-core-icon-list-icon icon-home   " style="color: #000000 ;font-size: 20px ;width: 20px ;" ></i></span>
                                                             <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #000000 ;font-size: 20px ;">7862 E. Firestone Blvd. Downey, CA 90241</span></div>
@@ -697,7 +697,7 @@
                                         <div class="gdlr-core-pbf-background-wrap wrapper-first-image-none">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.05"></div>
                                         </div>
-                                       <iframe class="map-clinic" width="100%" height="100%" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJzXJNuyoz3YAR8BRlYvNkhvU&key=AIzaSyDLyAKpn0Y7qrFRZvbpB6E9QcdT9dcC-u8" allowfullscreen></iframe>
+                                       <iframe class="map-clinic" width="100%" height="100%" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJtYoza7zNwoARnZ_s3XFUJVQ&key=AIzaSyDLyAKpn0Y7qrFRZvbpB6E9QcdT9dcC-u8" allowfullscreen></iframe>
                                     </div>
                                 </div>
                                 <div class="gdlr-core-pbf-column gdlr-core-column-30 top-shadow" data-skin="Clinic Contact Newsletter" id="gdlr-core-column-45445">
@@ -723,13 +723,13 @@
                                                 <div class="gdlr-core-icon-list-item gdlr-core-item-pdlr gdlr-core-item-pdb clearfix  gdlr-core-left-align">
                                                     <ul>
                                                         <li class=" gdlr-core-skin-divider clearfix" style="margin-bottom: 14px ;"><span class="gdlr-core-icon-list-icon-wrap gdlr-core-left"><i class="gdlr-core-icon-list-icon icon-map" style="color: #17449e ;font-size: 20px ;width: 20px ;" ></i></span>
-                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #17449e ;font-size: 18px ;">16660 Paramount Blvd Suite #309, Paramount, CA 90723</span></div>
+                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #17449e ;font-size: 18px ;">7862 E. Firestone Blvd. Downey, CA 90241</span></div>
                                                         </li>
                                                         <li class=" gdlr-core-skin-divider clearfix" style="margin-bottom: 14px ;"><span class="gdlr-core-icon-list-icon-wrap gdlr-core-left"><i class="gdlr-core-icon-list-icon icon-phone" style="color: #17449e ;font-size: 20px ;width: 20px ;" ></i></span>
-                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #17449e ;font-size: 18px ;">+1-562-634-1049 PHONE</span></div>
+                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #17449e ;font-size: 18px ;">(562) 869-7007 PHONE</span></div>
                                                         </li>
                                                         <li class=" gdlr-core-skin-divider clearfix" style="margin-bottom: 14px ;"><span class="gdlr-core-icon-list-icon-wrap gdlr-core-left"><i class="gdlr-core-icon-list-icon icon-printer" style="color: #17449e ;font-size: 20px ;width: 20px ;" ></i></span>
-                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #17449e ;font-size: 18px ;">+1-562-634-6149 FAX</span></div>
+                                                            <div class="gdlr-core-icon-list-content-wrap"><span class="gdlr-core-icon-list-content" style="color: #17449e ;font-size: 18px ;">(562) 869-0487 FAX</span></div>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -743,7 +743,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-opening-hour-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-divider-style-solid" style="padding-bottom: 45px ;">
                                                     <div class="gdlr-core-opening-hour-list">
-                                                        <div class="gdlr-core-opening-hour-list-item" style="border-color: #dddddd ;"><span class="gdlr-core-opening-hour-day" style="color: #17449e ;"><i class="icon_clock_alt" style="color: #17449e ;"  ></i>Monday-Friday</span><span class="gdlr-core-opening-hour-time gdlr-core-opening-hour-open" style="color: #17449e ;">9:30AM - 6:30PM</span></div>
+                                                        <div class="gdlr-core-opening-hour-list-item" style="border-color: #dddddd ;"><span class="gdlr-core-opening-hour-day" style="color: #17449e ;"><i class="icon_clock_alt" style="color: #17449e ;"  ></i>Monday-Friday</span><span class="gdlr-core-opening-hour-time gdlr-core-opening-hour-open" style="color: #17449e ;">9:00AM - 6:00PM</span></div>
                                                         <div class="gdlr-core-opening-hour-list-item" style="border-color: #dddddd ;"><span class="gdlr-core-opening-hour-day" style="color: #17449e ;"><i class="icon_clock_alt" style="color: #17449e ;"  ></i>Saturday</span><span class="gdlr-core-opening-hour-time gdlr-core-opening-hour-open" style="color: #17449e ;">CLOSED</span></div>
                                                         <div class="gdlr-core-opening-hour-list-item" style="border-color: #dddddd ;"><span class="gdlr-core-opening-hour-day" style="color: #17449e ;"><i class="icon_clock_alt" style="color: #17449e ;"  ></i>Sunday</span><span class="gdlr-core-opening-hour-time gdlr-core-opening-hour-open" style="color: #17449e ;">CLOSED</span></div>
                                                     </div>
@@ -809,13 +809,13 @@
                                     <p><img class="alignnone size-full wp-image-6129" src="../hospital/upload/logo-1.png" alt="" width="170" />
                                         <br />
                                         <span class="gdlr-core-space-shortcode" style="margin-top: -27px ;"></span>
-                                        <br /> Suite #309,
-                                        <br /> 16660 Paramount Blvd, 
-                                        <br /> Paramount, CA 90723
+                                        <br /> Tender Care Community Clinic, Inc.
+                                        <br /> 7862 Firestone Blvd. 
+                                        <br /> Downey, CA 90241
                                         <br />
                                         <span class="gdlr-core-space-shortcode" style="margin-top: 0px ;"></span>
                                         <br />
-                                        <i class="icon-phone" style="font-size: 19px ;color: #17449E ;margin-right: 10px ;"></i><span style="color: #17449e;">562-634-1049</span>
+                                        <i class="icon-phone" style="font-size: 19px ;color: #17449E ;margin-right: 10px ;"></i><span style="color: #17449e;">(562) 869-7007</span>
                                         <br />
                                         <span class="gdlr-core-space-shortcode" style="margin-top: -15px ;"></span>
                                         <br />
