--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -504,11 +504,11 @@
                                                             <li class="gdlr-core-item-mglr">
                                                                 <div class="gdlr-core-testimonial clearfix">
                                                                     <div class="gdlr-core-testimonial-content-wrap">                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
-                                                                            <p>I have been a patient of Dr. Morales for years. He delivered 3 of my wonderful children. He has a friendly staff that always makes me feel welcome and his office has accommodating hours for patient visits.</p>
+                                                                            <p>I will highly and faithfully recommend Dr. Wilson A. Morales my OB/gyne to my family, to my relatives, to my friends and to other people too. He is excellent in His field as an OB/ gyne doctor. He really cares for his patients. All his staff was very good and very accommodating too.</p>
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Ms. Khoy in SantaFeSprings , CA – Feb 05, 2019</div>
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Josephine O. Agdigos – Nov, 2021</div>
                                                                             </div>
                                                                         </div>
                                                                             <img class="test-star" src="/images/5-stars-transparent-background-3.png">
@@ -519,11 +519,13 @@
                                                                 <div class="gdlr-core-testimonial clearfix">
                                                                     <div class="gdlr-core-testimonial-content-wrap">
                                                                         <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
-                                                                            <p>I highly recommend Dr. Morales. He takes the time of explaining treatment in detail to his patiens. I had surgery in Jan 2019, everything went smooth. Thank you again Dr. Morales YOU'RE THE BEST!</p>
+                                                                            <p>Dr. Wilson Morales was very professional and helpful. He answered all my questions and concerns. He was very considerate of my worries. Overall, a great doctor!</p>
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none">Elba in Paramount, CA – Mar 22, 2019</div>
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none">Tina Perez - January, 2022
+
+                                                                                </div>
                                                                             </div>
                                                                         </div>
                                                                         <img class="test-star" src="/images/5-stars-transparent-background-3.png">
@@ -534,11 +536,45 @@
                                                                 <div class="gdlr-core-testimonial clearfix">
                                                                     <div class="gdlr-core-testimonial-content-wrap">
                                                                         <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
-                                                                            <p>I highly recommend Dr. Morales. He takes his time with appointments, he's an expert with what he does, and he really cares about his patients. I was cared for from beginning till end of my pregnancies. He responded immediately every time me and my husband had to call him, this was very helpful and made us appreciate how caring of a doctor he is.</p>
+                                                                            <p>Love dr Morales very helpful and friendly staff always nice and understanding just so good all around make pregnancy very comfortable</p>
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Steph J. in CA – Nov 01, 2018</div>
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none">Aoeleon Morris - 2021
+
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <img class="test-star" src="/images/5-stars-transparent-background-3.png">
+                                                                    </div>
+                                                                </div>
+                                                            </li>
+                                                            <li class="gdlr-core-item-mglr">
+                                                                <div class="gdlr-core-testimonial clearfix">
+                                                                    <div class="gdlr-core-testimonial-content-wrap">
+                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
+                                                                            <p>Dr. Wilson Morales is the best doctor. He is very attentive and his nurse Rosa is the best. I love his office and all the staff.</p>
+                                                                        </div>
+                                                                        <div class="gdlr-core-testimonial-author-wrap clearfix">
+                                                                            <div class="gdlr-core-testimonial-author-content">
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none">Shirlee Washington - 2021
+                                                                                
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <img class="test-star" src="/images/5-stars-transparent-background-3.png">
+                                                                    </div>
+                                                                </div>
+                                                            </li>
+                                                            <li class="gdlr-core-item-mglr">
+                                                                <div class="gdlr-core-testimonial clearfix">
+                                                                    <div class="gdlr-core-testimonial-content-wrap">
+                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
+                                                                            <p>I've been a patient of Dr. Morales for about 6 years now. He's honestly the best doctor I've ever been to. Rosa, his assistant is very nice too.</p>
+                                                                        </div>
+                                                                        <div class="gdlr-core-testimonial-author-wrap clearfix">
+                                                                            <div class="gdlr-core-testimonial-author-content">
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Yoland - July, 2021</div>
                                                                             </div>
                                                                         </div>
                                                                         <img class="test-star" src="/images/5-stars-transparent-background-3.png">
