--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -423,7 +423,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!--
                                 <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first" data-skin="acc-ourdoc" id="gdlr-core-column-56473">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="margin: 0px 0px 0px 0px;padding: 100px 90px 95px 95px;" data-sync-height="f4">
                                         <div class="gdlr-core-pbf-background-wrap wrapper-first-image-none">
@@ -470,7 +469,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                
                                 <div class="gdlr-core-pbf-column gdlr-core-column-30" id="gdlr-core-column-96378">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="padding: 150px 0px 150px 0px;" data-sync-height="f4" data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap faq-image">
@@ -478,7 +476,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                -->
                             </div>
                         </div>
                     </div>
@@ -504,6 +501,50 @@
                                                     <div class="gdlr-core-flexslider flexslider gdlr-core-js-2 " data-type="carousel" data-column="1" data-move="1" data-nav="navigation-outer" data-nav-parent="self" data-vcenter-nav="1">
                                                         <div class="gdlr-core-flexslider-custom-nav  gdlr-core-style-navigation-outer gdlr-core-center-align"><i class=" fa fa-long-arrow-left flex-prev" style="color: #000000 ;font-size: 40px ;left: -150px ;"></i><i class="fa fa-long-arrow-right flex-next" style="color: #000000 ;font-size: 40px ;right: -150px ;"></i></div>
                                                         <ul class="slides">
+                                                            <li class="gdlr-core-item-mglr">
+                                                                <div class="gdlr-core-testimonial clearfix">
+                                                                    <div class="gdlr-core-testimonial-content-wrap">                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
+                                                                            <p>I have been a patient of Dr. Morales for years. He delivered 3 of my wonderful children. He has a friendly staff that always makes me feel welcome and his office has accommodating hours for patient visits.</p>
+                                                                        </div>
+                                                                        <div class="gdlr-core-testimonial-author-wrap clearfix">
+                                                                            <div class="gdlr-core-testimonial-author-content">
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Ms. Khoy in SantaFeSprings , CA – Feb 05, 2019</div>
+                                                                            </div>
+                                                                        </div>
+                                                                            <img class="test-star" src="/images/5-stars-transparent-background-3.png">
+                                                                    </div>
+                                                                </div>
+                                                            </li>
+                                                            <li class="gdlr-core-item-mglr">
+                                                                <div class="gdlr-core-testimonial clearfix">
+                                                                    <div class="gdlr-core-testimonial-content-wrap">
+                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
+                                                                            <p>I highly recommend Dr. Morales. He takes the time of explaining treatment in detail to his patiens. I had surgery in Jan 2019, everything went smooth. Thank you again Dr. Morales YOU'RE THE BEST!</p>
+                                                                        </div>
+                                                                        <div class="gdlr-core-testimonial-author-wrap clearfix">
+                                                                            <div class="gdlr-core-testimonial-author-content">
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none">Elba in Paramount, CA – Mar 22, 2019</div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <img class="test-star" src="/images/5-stars-transparent-background-3.png">
+                                                                    </div>
+                                                                </div>
+                                                            </li>
+                                                            <li class="gdlr-core-item-mglr">
+                                                                <div class="gdlr-core-testimonial clearfix">
+                                                                    <div class="gdlr-core-testimonial-content-wrap">
+                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
+                                                                            <p>I highly recommend Dr. Morales. He takes his time with appointments, he's an expert with what he does, and he really cares about his patients. I was cared for from beginning till end of my pregnancies. He responded immediately every time me and my husband had to call him, this was very helpful and made us appreciate how caring of a doctor he is.</p>
+                                                                        </div>
+                                                                        <div class="gdlr-core-testimonial-author-wrap clearfix">
+                                                                            <div class="gdlr-core-testimonial-author-content">
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Steph J. in CA – Nov 01, 2018</div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <img class="test-star" src="/images/5-stars-transparent-background-3.png">
+                                                                    </div>
+                                                                </div>
+                                                            </li>
                                                             <li class="gdlr-core-item-mglr">
                                                                 <div class="gdlr-core-testimonial clearfix">
                                                                     <div class="gdlr-core-testimonial-content-wrap">                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
@@ -584,6 +625,7 @@
                                                                     </div>
                                                                 </div>
                                                             </li>
+                                                            
                                                         </ul>
                                                     </div>
                                                 </div>
