--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -511,7 +511,7 @@
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Ms. Khoy in SantaFeSprings , CA – Feb 05, 2019</div>
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Ms. Khoy -  Feb, 2019</div>
                                                                             </div>
                                                                         </div>
                                                                             <img class="test-star" src="/images/5-stars-transparent-background-3.png">
@@ -526,7 +526,9 @@
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none">Elba in Paramount, CA – Mar 22, 2019</div>
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none">Elba in Paramount - Mar, 2019
+
+                                                                                </div>
                                                                             </div>
                                                                         </div>
                                                                         <img class="test-star" src="/images/5-stars-transparent-background-3.png">
@@ -541,7 +543,7 @@
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Steph J. in CA – Nov 01, 2018</div>
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Steph J. - Nov, 2018</div>
                                                                             </div>
                                                                         </div>
                                                                         <img class="test-star" src="/images/5-stars-transparent-background-3.png">
