--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -526,7 +526,7 @@
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
                                                                             <div class="gdlr-core-testimonial-author-content">
-                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none">Elba in Paramount - Mar, 2019
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none">Elba - Mar, 2019
 
                                                                                 </div>
                                                                             </div>
