--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -374,6 +374,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="gdlr-core-pbf-element">
+                                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 0px ;">
+                                                    <div class="gdlr-core-title-item-title-wrap ">
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 65px ;letter-spacing: 3px ;color: #17449e ;">Services Provided<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h3>
+                                                    </div>
+                                                    <div class="gldr-core-title-item-title-wrap">
+                                                        <h4 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 25px ;letter-spacing: 3px ;color: #4e586d ;">Information provided by the American College of Obstetricians and Gynecologists A.C.O.G <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h4>
+                                                    </div>
+                                                </div>
+                                            </div>
                     <div class="gdlr-core-pbf-wrapper " style="padding: 0px 0px 0px 0px;" id="about">
                         <div class="gdlr-core-pbf-background-wrap"></div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
@@ -397,7 +407,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 17px ;">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h2 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 50px ;letter-spacing: 0px ;text-transform: none ;color: #282828 ;">Meet Dr. Morales<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h2></div>
+                                                        <h2 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 50px ;letter-spacing: 0px ;text-transform: none ;color: #282828 ;">Meet Your Providers<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h2></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
