--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -517,6 +517,34 @@
                                                             <li class="gdlr-core-item-mglr">
                                                                 <div class="gdlr-core-testimonial clearfix">
                                                                     <div class="gdlr-core-testimonial-content-wrap">                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
+                                                                            <p>Doctor Morales is one of the Best Obstetrician/Gynecologist I ever had he delivered my daughter last week I am so grateful for that I will definitely recommend him.</p>
+                                                                        </div>
+                                                                        <div class="gdlr-core-testimonial-author-wrap clearfix">
+                                                                            <div class="gdlr-core-testimonial-author-content">
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Lizeth Damian -  Decembe 10, 2023</div>
+                                                                            </div>
+                                                                        </div>
+                                                                            <img class="test-star" src="/images/5-stars-transparent-background-3.png">
+                                                                    </div>
+                                                                </div>
+                                                            </li>
+                                                            <li class="gdlr-core-item-mglr">
+                                                                <div class="gdlr-core-testimonial clearfix">
+                                                                    <div class="gdlr-core-testimonial-content-wrap">                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
+                                                                            <p>Dr. Morales is great, she cares about her patients. Her nurse along side of her is just as great. They are always cheerful and happy. They make you feel comfortable in their space.</p>
+                                                                        </div>
+                                                                        <div class="gdlr-core-testimonial-author-wrap clearfix">
+                                                                            <div class="gdlr-core-testimonial-author-content">
+                                                                                <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #000000 ;font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Devynn Magallon -  October, 2023</div>
+                                                                            </div>
+                                                                        </div>
+                                                                            <img class="test-star" src="/images/5-stars-transparent-background-3.png">
+                                                                    </div>
+                                                                </div>
+                                                            </li>
+                                                            <li class="gdlr-core-item-mglr">
+                                                                <div class="gdlr-core-testimonial clearfix">
+                                                                    <div class="gdlr-core-testimonial-content-wrap">                                                                        <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 25px ;font-style: italic ;font-weight: 400 ;letter-spacing: 0px ;color: #000000 ;padding-bottom: 20px ;">
                                                                             <p>I have been a patient of Dr. Morales for years. He delivered 3 of my wonderful children. He has a friendly staff that always makes me feel welcome and his office has accommodating hours for patient visits.</p>
                                                                         </div>
                                                                         <div class="gdlr-core-testimonial-author-wrap clearfix">
